--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation "org.testcontainers:postgresql:1.18.0"
+	testImplementation "org.testcontainers:junit-jupiter:1.18.0"
 
 }
 
